# owlready3

./: .gitignore  HANDOFF.md  MANIFEST.in  README.md  README.rst  __init__.py  annotation.py  base.py  class_construct.py  close.py  disjoint.py  dl_render.py  driver.py  entity.py  fs_render.py  individual.py  manchester.py  namespace.py  ntriples_diff.py  observe.py  owlready2_optimized.pyx  owlready3_optimized.pyx  owlxml_2_ntriples.py  prop.py  pyoxigraph_store.py  pyproject.toml  rdflib_store.py  rdfxml_2_ntriples.py  reasoning.py  rule.py  setup.py  triplelite.py  tripleoxigraph.py  ui_explorer.py  util.py
doc/: HANDOFF.md  TODO.rst  annotations.rst  axiom_mapping.md  class.rst  conf.py  disjoint.rst  index.rst  install.rst  integration.rst  intro.rst  manchester.rst  mixing_python_owl.rst  namespace.rst  onto.rst  owlready3_pdf.json  porting1.rst  properties.rst  reasoning.rst  reasoning_features.md  restriction.rst  rule.rst  world.rst
test/: Bench.java  Save.java  bench.py  bench_sparql.py  drug.py  mie-05.owl  mie_dl_consistent.ofn  pro.owl  regtest.py  run_oxigraph_regtest.py  sulo.owl  test_hermit_parity.py  test_integration_omny.py  test_mixed.py  test_parser.py  test_quadstore_slash.sqlite3  test_rule.owl  test_sulo_mie.py
test/bench/: dbtest_owlready3.py
